<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.karat.instagramclone.UserProfileActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/firstSection"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_alignParentStart="true"
                >


                <ImageView
                    tools:ignore="ContentDescription"
                    android:id="@+id/profilePictureImageView"
                    android:onClick="profilePictureImageView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/avatar"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/postsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/posts"
                        android:textColor="@color/colorGray93"
                        android:textStyle="bold"
                        android:textSize="12sp"/>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/followersTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:textColor="@color/colorGray93"
                        android:textStyle="bold"
                        android:textSize="12sp"/>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/followingTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textColor="@color/colorGray93"
                        android:textStyle="bold"
                        android:textSize="12sp"/>



                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondSection"
                android:layout_width="match_parent"
                android:layout_height="168dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                android:layout_marginTop="120dp"
                >


                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Soon Santos"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/descriptionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="This is going to be the description for the user, I will write everything I need here. This is going to be the description for the user, I will write everything I need here. This is going to be the description for the user, I will write everything "
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />


            </LinearLayout>

            <GridLayout
                android:id="@+id/thirdSection"
                android:layout_width="match_parent"
                android:layout_height="253dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="288dp"
                android:layout_marginBottom="53dp">




            </GridLayout>

        </RelativeLayout>

    </ScrollView>

    <include
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/activity_bottombar"
        />



</android.support.constraint.ConstraintLayout>